# Center-Domiciliation-App

./: .gitignore  AGENTS.md  BACKUP_SYSTEM.md  CHANGELOG.md  CHANGES_SUMMARY_v2.3.md  CHANGE_LIST.md  CLAUDE.md  COMBOBOX_DARKMODE_FIX.txt  Creation_Variables.md  DARK_MODE_SUMMARY.txt  DASHBOARD_TESTING_REPORT.md  DEFAULTS_MANAGEMENT_GUIDE.md  DESIGN_SYSTEM.md  DOCUMENTATION_ORGANIZATION.md  FINAL_SESSION_SUMMARY.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  FIXES_v2.3.md  FIX_SUMMARY.md  GENERATION_SELECTOR_COMPLETE.md  GENERATION_SELECTOR_COMPLETE_v2.3.md  GENERATION_SELECTOR_INTEGRATION.md  GIT_BEST_PRACTICES.md  GIT_BRANCH_GUIDELINES.txt  MERGE_RESOLUTION_COMPLETE.md  MODIFICATIONS_LOG.md  Main.py  Main_app.py  Main_app.py.bak  PROJECT_SUMMARY.md  README.md  README_NEW.md  README_REDESIGN_COMPLETE.md  README_SESSION_STATUS.md  README_SIMPLIFICATION_COMPLETE.md  README_STANDARDIZATION_COMPLETE.md  REFERENCE_DATA_IMPLEMENTATION.md  RELEASE_INFO.md  RELEASE_v2.1.0.md  STYLE_UPDATE_REPORT.md  (+25 more)
.github/: copilot-instructions.md
Models/: 2026-03_Attestation-Domiciliation-Initiale_Template.docx  2026-03_Contrat-Domiciliation_Template.docx  2026-03_Declaration-Immatriculation-RC_Template.docx  2026-03_Statuts_Template.docx  2026_03_Modèle_Annonce_Journal.docx  2026_03_Modèle_Attest_Domiciliation.docx  2026_03_Modèle_Contrat_Domiciliation.docx  2026_03_Modèle_Décl_Imm_Rc.docx  Charte-Nommage-Generation_v4.md  My_Attest_domiciliation.docx  My_Contrat_domiciliation v0.docx  My_Contrat_domiciliation.docx  My_Contrat_domiciliation_Misa.docx  My_Dépot_Légal.docx  (+2 more)
config/: app.php  (+3 more)
(+203 files in other folders)
